--- a/src/stylesheets/CharacterCard.css
+++ b/src/stylesheets/CharacterCard.css
@@ -3,11 +3,11 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 300px;
-    border: 1px solid pink;
+    border: 1px solid black;
 }
 
 img {
     width: 200px;
-    height: auto;
+    height: 250px;
+    object-fit: cover;
 }
