--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -1,9 +1,11 @@
-body {
+* {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+body {
     font-family: sans-serif;
-    display: flex;
-    flex-direction: column;
 }
 
 li {
