--- a/src/stylesheets/CharacterCard.css
+++ b/src/stylesheets/CharacterCard.css
@@ -2,12 +2,34 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-around;
+    height: 400px;
+    border: 1px solid black;
+    margin: 10px;
+    background-color: #FF7854;
+}
+
+.CharacterCard__container:hover {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
     border: 1px solid black;
+    margin: 10px;
+    background-color: darkgreen;
 }
 
 img {
     width: 200px;
     height: 250px;
     object-fit: cover;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+a:hover {
+    color: white;
 }
