--- a/src/stylesheets/CharacterDetail.css
+++ b/src/stylesheets/CharacterDetail.css
@@ -17,16 +17,50 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border: 1px solid black;
     margin-top: 30px;
+    color: white;
 }
 
 .CardDetail-info {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    height: 400px;
+    width: 100%;
 }
 
 .CharacterDetail-house {
     width: 100px;
     height: auto;
+}
+
+.CardDetail-image {
+    max-height: 230px;
+    width: auto;
+    object-fit: cover;
+}
+
+@media all and (min-width: 786px) {
+    .CardContainer__window {
+        background-color: white;
+    }
+
+    .CardDetail__container {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        margin-top: 30px;
+        height: 400px;
+        width: 600px;
+        border: 1px solid black;
+        background-color: #FF7854;
+    }
+
+    .CardDetail-image {
+        max-height: 398px;
+        width: auto;
+        object-fit: cover;
+    }
 }
