--- a/src/stylesheets/Filters.css
+++ b/src/stylesheets/Filters.css
@@ -3,3 +3,9 @@
     justify-content: center;
     margin: 20px 0 20px 0;
 }
+
+.Filters__input {
+    width: 300px;
+    height: 30px;
+    border: 1px solid green;
+}
