--- a/src/stylesheets/Home.css
+++ b/src/stylesheets/Home.css
@@ -1,3 +1,21 @@
 .Home__header {
+    display: block;
     text-align: center;
+    padding: 20px 0 20px 0;
+}
+
+.Home__main {
+    flex-grow: 1;
+}
+
+.Home__footer {
+    padding: 10px 0 10px 10px;
+    border-top: 1px solid black;
+    background-color: lightgrey;
+}
+
+@media all and (min-width: 798px) {
+    .Home__header {
+        font-size: 35px;
+    }
 }
