--- a/src/stylesheets/CharacterDetail.css
+++ b/src/stylesheets/CharacterDetail.css
@@ -23,7 +23,6 @@
 }
 
 .CardDetail__container {
-    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -36,7 +35,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-left: 257px;
     justify-content: space-evenly;
     height: 400px;
     width: 100%;
@@ -48,9 +46,6 @@
 }
 
 .CardDetail-image {
-    position: absolute;
-    top: 0;
-    left: 0;
     max-height: 230px;
     width: auto;
     object-fit: cover;
@@ -61,6 +56,7 @@
         background-color: white;
     }
     .CardDetail__container {
+        position: relative;
         display: flex;
         flex-direction: row;
         align-items: center;
@@ -71,9 +67,14 @@
         border: 1px solid black;
         background-color: #FF7854;
     }
+    .CardDetail-info {
+        margin-left: 257px;
+    }
     .CardDetail-image {
+        position: absolute;
+        top: 0;
+        left: 0;
         max-height: 398px;
-        max-width: 255px;
         width: auto;
         object-fit: cover;
     }
