--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -6,8 +6,11 @@
 
 body {
     font-family: sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 li {
